--- a/index.html
+++ b/index.html
@@ -77,6 +77,16 @@
             <div class="kpi-note">시간 압박 시 부호 실수 재발(루틴 고정 필요)</div>
           </div>
         </div>
+
+        <!-- 교습사진 -->
+        <div class="teaching-photo">
+          <img 
+            src="https://drive.google.com/uc?export=download&id=14mzHXYfCwNgZdqxMlt2PFVeeH0bsuZM5" 
+            alt="교습사진"
+            loading="lazy"
+            onerror="this.onerror=null; this.src='https://drive.google.com/thumbnail?id=14mzHXYfCwNgZdqxMlt2PFVeeH0bsuZM5&sz=w1000'"
+          />
+        </div>
       </article>
 
       <article class="card">
