--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
       <article class="card">
         <div class="card-h">
-          <h2>강점/보완 포인트</h2>
+          <h2>장단점</h2>
           <span class="tag info">학습 전략 제안</span>
         </div>
 
