명칭수정: 종합리포트

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       <article class="card">
         <div class="bc">
           <div class="bc-head">
-            <div class="bc-ttl">🎬 동영상(주간 리포트)</div>
+            <div class="bc-ttl">🎬 종합리포트(동영상)</div>
           </div>
           <iframe 
             src="https://drive.google.com/file/d/15xUSI3zxHdyzfV1mW2YS6Biy0xLD-wH7/preview" 
@@ -203,7 +203,7 @@
       <article class="card">
         <div class="bc">
           <div class="bc-head">
-            <div class="bc-ttl">🎧 오디오(주간 리포트)</div>
+            <div class="bc-ttl">🎧 종합리포트(오디오)</div>
           </div>
           <iframe 
             src="https://drive.google.com/file/d/1G9ttH4CKhKeGmsJqi5Z-Th33Mswts8EI/preview" 
