명칭수정: 지도방향

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
     <!-- Knowledge map -->
     <section class="card">
       <div class="card-h">
-        <h2>지식맵(네트워크) · 현재 정복/앞으로 정복</h2>
+        <h2>교과서 진도</h2>
         <span class="tag">시각화</span>
       </div>
 
@@ -405,7 +405,7 @@
           </div>
 
           <div class="insight">
-            <div class="ins-title">지도 해석</div>
+            <div class="ins-title">지도 방향</div>
             <p>
               이번 주는 “다항식 곱셈” 자체보다, 그 기반이 되는 <b>부호/분배/동류항</b>의 자동화에 집중했습니다.
               현재는 <b>검산(체크 루틴)</b>을 진행 중이며, 다음 주에는 <b>시간 압박에서도 루틴을 유지</b>하는 훈련을 통해
